Add additional styling

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>final_splash</title>
   </head>
-  <body>
+  <body style="margin: 0px; background: #000000">
     <noscript>
       <strong>We're sorry but final_splash doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
